--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.3.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }, 
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
